<resources>
    <string name="app_name">Al-burak</string>

    // All code
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="error_server">Невозможно связаться с сервером</string>
    <string name="close">Закрыть</string>
    <string name="findStateNumber">Поиск по гос.номеру</string>
    <string name="page_updated">Страница обновлена</string>
    <string name="edit">Изменить</string>
    <string name="save">Сохранить</string>

    // EditItem - PreOrder, Complete
    <string name="successfullySaved">Машина успешно сохранена</string>
    <string name="repeatSave">Попробуйте сохранить машину заново или проверьте подключение с интернетом</string>


    // Add
    <string name="successAdd">Машина успешно добавлена</string>
    <string name="successDelete">Машина успешно удалена</string>
    <string name="repeatAdd">Попробуйте добавить машину заново или проверьте подключение с интернетом</string>

    // MainActivity
    <string name="preOrder">Предзаказы</string>
    <string name="completedWork">Выполненные работы</string>
    <string name="addCar">Добавить машину</string>
    <string name="addToPreOrder">Добавить клиента в предзаказы</string>
    <string name="addToCompletedWork">Добавить машину в выполненные работы</string>

    //PreOrderAddCar
    <string name="Notes">Примечания</string>
    <string name="FinalSum">Сумма итоговой работы</string>
    <string name="StateNumberCar">Государственный номер</string>
    <string name="CarBrand">Марка машины</string>
    <string name="addClient">Добавить клиента</string>
    <string name="phone_number">Номер телефона</string>
    <string name="client_name">Имя клиента</string>
    <string name="choiceDataPreOrder">Выбрать дату</string>
    <string name="addPreOrder">Добавить предзаказ</string>


    //EndPreOrder
    <string name="endPreOrder">Завершить предзаказ</string>
    <string name="waitTaskAddCar">Машина добавляется. Программа откроет главный экран по завершению своей работы.</string>
    <string name="congratulationsNurislam">Поздравляю с новым клиентом, Нурислам ожидает немного шекелей</string>


    //Kotlin
    <string name="enter_your_name">Введите своё имя</string>
    <string name="enter_car_name">Введите марку машины</string>
    <string name="enter_state_number">Введите государственный номер машины</string>
    <string name="enterPayment">Введите оплату за работу</string>
    <string name="enterClientPhoneNumber">Введите номер телефона клиента</string>
    <string name="enterClientName">Введите имя клиента</string>
    <string name="enterWorkList">Введите список работы</string>
    <string name="wannaDel">Вы действейтельно хотите удалить машину ?</string>
    <string name="deletePreOrder">Удалить</string>
    <string name="informationPreOrder">Информация о предзаказе</string>

    // Completed Work
    <string name="employee_name">Имя работника</string>
    //Kotlin
    <string name="delete">Удалить</string>
    <string name="addComplete">Добавить заказ</string>
    <string name="informationCompleted">Информация о выполненной машине</string>


    // Detail_client_list - activity
    <string name="employee_name1">Имя работника: </string>
    <string name="CarBrand1">Марка машины: </string>
    <string name="StateNumberCar1">Гос номер: </string>
    <string name="FinalSum1">Сумма работы: </string>
    <string name="phone_number1">Номер телефона: </string>
    <string name="client_name1">Имя клиента: </string>
    <string name="Notes1">Примечания: </string>
    <string name="addClient1">Добавить клиента: </string>

    // client_list - Complete, Pre-Order
    <string name="stateNumber_simple">KZ063AMG01</string>
    <string name="detail_simple">Подробнее</string>
    <string name="sum_simple">100 000</string>
    <string name="datePicker">Дата брони</string>
    <string name="end">Завершить</string>


    // Login
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="logIn">Войти</string>
    <string name="enterLogin">Введите логин</string>
    <string name="enterPassword">Введите пароль</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="editOrder">Изменить заказ</string>

    <string-array name="carBrands">
        <item>Mercedes-Benz</item>
        <item>BMW</item>
        <item>Toyota</item>
        <item>Nissan</item>
        <item>Kia</item>
        <item>Subaru</item>
        <item>Lada</item>
        <item>Daewoo</item>
        <item>Hyundai</item>
        <item>Audi</item>
        <item>DAC</item>
        <item>DAF</item>
        <item>Газель</item>
        <item>Камаз</item>
        <item>Газ</item>
        <item>Hummer</item>
        <item>JAC</item>
        <item>Jeep</item>
        <item>Land Rover</item>
        <item>Mazda</item>
        <item>Renault</item>
        <item>Ford</item>
        <item>Chevrolet</item>
        <item>Volkswagen</item>
        <item>Ravon</item>
        <item>Honda</item>
        <item>Volvo</item>
        <item>Chery</item>
        <item>Infinity</item>
        <item>Skoda</item>
        <item>Peugeot</item>
        <item>Chrysler</item>
        <item>Mitsubishi</item>
        <item>Lexus</item>
        <item>Acura</item>
        <item>Datsun</item>
        <item>Suzuki</item>
        <item>Citroen</item>
        <item>Fiat</item>
        <item>Seat</item>
        <item>Opel</item>
        <item>УАЗ</item>
        <item>Isuzu</item>
        <item>Geely</item>
        <item>Changan</item>
        <item>Lifan</item>
        <item>Bentley</item>
        <item>Cadillac</item>
        <item>Citroen</item>
        <item>Citroen</item>
        <item>Lamborghini</item>
        <item>Porsche</item>
        <item>Ferrari</item>

    </string-array>
</resources>