<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor"
    android:padding="15dp">

    <TextView
        style="@style/TitleText_detailClient"
        android:layout_marginTop="15dp"
        android:text="@string/informationPreOrder"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/ET_carName_alert_item_preOrder"
        style="@style/ET_alert_item"
        android:layout_marginTop="62dp"
        android:autofillHints="@string/CarBrand"
        android:drawableStart="@drawable/ic_car"
        android:hint="@string/CarBrand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ET_clientName_alert_item_preOrder"
        style="@style/ET_alert_item"
        android:autofillHints="@string/FinalSum"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/client_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/ET_carName_alert_item_preOrder"
        app:layout_constraintStart_toStartOf="@+id/ET_carName_alert_item_preOrder"
        app:layout_constraintTop_toBottomOf="@+id/ET_carName_alert_item_preOrder" />

    <EditText
        android:id="@+id/ET_number_alert_item_preOrder"
        style="@style/ET_alert_item"
        android:autofillHints="@string/phone_number"
        android:enabled="true"
        android:drawableStart="@drawable/ic_phone"
        android:hint="@string/phone_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/ET_clientName_alert_item_preOrder"
        app:layout_constraintStart_toStartOf="@+id/ET_clientName_alert_item_preOrder"
        app:layout_constraintTop_toBottomOf="@+id/ET_clientName_alert_item_preOrder" />

    <EditText
        android:id="@+id/ET_stateNumber_alert_item_preOrder"
        style="@style/ET_alert_item"
        android:autofillHints="@string/StateNumberCar"
        android:drawableStart="@drawable/ic_country"
        android:hint="@string/StateNumberCar"
        app:layout_constraintEnd_toEndOf="@+id/ET_number_alert_item_preOrder"
        app:layout_constraintStart_toStartOf="@+id/ET_number_alert_item_preOrder"
        app:layout_constraintTop_toBottomOf="@+id/ET_number_alert_item_preOrder"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/ET_sum_alert_item_preOrder"
        style="@style/ET_alert_item"
        android:autofillHints="@string/FinalSum"
        android:drawableStart="@drawable/ic_cash"
        android:ems="10"
        android:hint="@string/FinalSum"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/ET_stateNumber_alert_item_preOrder"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ET_stateNumber_alert_item_preOrder"
        app:layout_constraintTop_toBottomOf="@+id/ET_stateNumber_alert_item_preOrder"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ET_date_alert_item_preOrder"
        style="@style/ET_alert_item"
        android:autofillHints="@string/datePicker"
        android:hint="@string/choiceDataPreOrder"
        app:drawableStartCompat="@drawable/ic_date"
        app:layout_constraintEnd_toEndOf="@+id/ET_sum_alert_item_preOrder"
        app:layout_constraintStart_toStartOf="@+id/ET_sum_alert_item_preOrder"
        app:layout_constraintTop_toBottomOf="@+id/ET_sum_alert_item_preOrder"
        tools:ignore="TextFields" />


    <EditText
        android:id="@+id/ET_workType_alert_item_preOrder"
        style="@style/ET_alert_item"
        android:autofillHints="@string/Notes"
        android:drawableStart="@drawable/ic_task_build"
        android:hint="@string/Notes"
        app:layout_constraintEnd_toEndOf="@+id/ET_date_alert_item_preOrder"
        app:layout_constraintStart_toStartOf="@+id/ET_date_alert_item_preOrder"
        app:layout_constraintTop_toBottomOf="@+id/ET_date_alert_item_preOrder" />

    <Button
        android:id="@+id/btn_close_alert_item_preOrder"
        style="@style/btn_alert_edit_item"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:text="@string/close"
        app:backgroundTint="@color/ButtonColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_workType_alert_item_preOrder" />

    <Button
        android:id="@+id/btn_end_alert_item_preOrder"
        style="@style/btn_alert_edit_item"
        android:layout_marginTop="15dp"
        android:text="@string/end"
        app:backgroundTint="@color/ButtonColor"
        app:layout_constraintEnd_toEndOf="@+id/btn_close_alert_item_preOrder"
        app:layout_constraintStart_toStartOf="@+id/btn_close_alert_item_preOrder"
        app:layout_constraintTop_toBottomOf="@+id/btn_close_alert_item_preOrder" />

    <Button
        android:id="@+id/btn_change_alert_item_preOrder"
        style="@style/btn_alert_edit_item"
        android:layout_marginTop="32dp"
        android:text="@string/edit"
        app:backgroundTint="@color/ButtonColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_workType_alert_item_preOrder" />

    <Button
        android:id="@+id/btn_delete_alert_item_preOrder"
        style="@style/btn_alert_edit_item"
        android:layout_marginTop="15dp"
        android:text="@string/delete"
        app:backgroundTint="@color/ButtonColor"
        app:layout_constraintEnd_toEndOf="@+id/btn_change_alert_item_preOrder"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_change_alert_item_preOrder"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_alert_item_preOrder" />


</androidx.constraintlayout.widget.ConstraintLayout>